--- a/angular.json
+++ b/angular.json
@@ -23,8 +23,7 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+            "styles": [              
               "src/styles.css"
             ],
             "scripts": []
@@ -89,10 +88,8 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
-              "src/styles.css",
-              "./node_modules/bootstrap/dist/css/bootstrap.min.css"
+            "styles": [              
+              "src/styles.css"              
             ],
             "scripts": []
           }
