--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~8.2.14",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "angular-in-memory-web-api": "^0.9.0",
     "bootstrap": "^4.4.0",
     "hammerjs": "^2.0.8",
     "primeicons": "^2.0.0",
