--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "angular-in-memory-web-api": "^0.9.0",
     "bootstrap": "^4.4.0",
     "hammerjs": "^2.0.8",
+    "ngx-loading": "^8.0.0",
     "primeicons": "^2.0.0",
     "primeng": "^8.1.1",
     "rxjs": "~6.4.0",
